cleanup (reduce usages of deprecated Getter interface)
GitOrigin-RevId: 4d916ad1e868a8eed7793a7cf22965a2096e38e8