@@ -15,22 +15,22 @@
  */
 package com.android.tools.idea.adb;
 
-import com.google.common.collect.ImmutableList;
 import com.intellij.openapi.options.Configurable;
 import com.intellij.openapi.options.SimpleConfigurable;
 import com.intellij.xdebugger.settings.DebuggerConfigurableProvider;
 import com.intellij.xdebugger.settings.DebuggerSettingsCategory;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import org.jetbrains.annotations.NotNull;
 
-public class AdbConfigurableProvider extends DebuggerConfigurableProvider {
+final class AdbConfigurableProvider extends DebuggerConfigurableProvider {
   @NotNull
   @Override
   public Collection<? extends Configurable> getConfigurables(@NotNull DebuggerSettingsCategory category) {
     if (AdbConfigurableUi.hasComponents() && category == DebuggerSettingsCategory.GENERAL) {
-      return ImmutableList.of(SimpleConfigurable.create("adbSettingsConfigurable", "Android Debug Bridge (adb)", AdbConfigurableUi.class,
-                                                        AdbOptionsService.getInstance()));
+      return List.of(SimpleConfigurable.create("adbSettingsConfigurable", "Android Debug Bridge (adb)", AdbConfigurableUi.class,
+                                               () -> AdbOptionsService.getInstance()));
     }
     return Collections.emptyList();
   }
